crates/mehen-cli/tests/snapshots/pr_comment_golden__filler_risk_unchanged_attention.snap
---
source: crates/mehen-cli/tests/pr_comment_golden.rs
expression: redacted
---
<!-- mehen-metrics -->
## [Mehen](https://github.com/ophi-dev/mehen) Summary (`HEAD~1`..`HEAD`)

No metric changes detected.

<!-- mehen-docs -->
## 📝 Documentation Metrics (this PR vs `HEAD~1`)

| File | DMI | Words | FKGL | Link Debt | Filler Risk |
|---|---:|---:|---:|---:|---:|
| `docs/generated/overview.md` | 90 ⚪ | 154 ⚪ | 14.7 ⚪ | 0.00 ⚪ | 0.67 (HEAD~1: 0.67) ⚠️ |

**Callouts**

- ⚠️ **docs/generated/overview.md** — filler/lazy risk 0.67 (HIGH); top contributors: large-unanchored-prose 1.00, low-artifact-density 1.00, low-repository-grounding 1.00

<details>
<summary>Full metric breakdown (structural · wording · lexical · readability)</summary>

### Structural / review

| File | RCI | MCC | MRPC | Evidence | Grounding |
|---|---:|---:|---:|---:|---:|
| `docs/generated/overview.md` | 0 ⚪ | 0 ⚪ | 1 ⚪ | 0.00 ⚪ | 0.00 ⚪ |

### English wording quality

| File | WQS | Passive % | Hedges /100w | Long sent. | Nominalizations |
|---|---:|---:|---:|---:|---:|
| `docs/generated/overview.md` | 1.00 ⚪ | 11% ⚪ | 0.0 ⚪ | 0 ⚪ | 8% ⚪ |

### English lexical & readability ensemble

| File | MATTR₅₀ | Hapax | Fog | SMOG | ARI | Coleman-Liau |
|---|---:|---:|---:|---:|---:|---:|
| `docs/generated/overview.md` | 0.85 ⚪ | 0.80 ⚪ | 16.2 ⚪ | — | 14.9 ⚪ | 20.5 ⚪ |

### Filler risk contributors (files with risk > 0.40)

- **`docs/generated/overview.md` (0.67)** — large-unanchored-prose 1.00, low-artifact-density 1.00, low-repository-grounding 1.00

</details>

> Legend: 🟢 improvement · 🔴 regression · ⚠️ attention · 🆕 new file · ⚪ no material change

> Generated by [mehen](https://github.com/ophi-dev/mehen) — the code quality watcher.
