crates/mehen-cli/tests/snapshots/pr_comment_golden__new_file_summary.snap
---
source: crates/mehen-cli/tests/pr_comment_golden.rs
expression: redacted
---
<!-- mehen-metrics -->
## [Mehen](https://github.com/ophi-dev/mehen) Summary (`HEAD~1`..`HEAD`)

No metric changes detected.

<!-- mehen-docs -->
## 📝 Documentation Metrics (this PR vs `HEAD~1`)

| File | DMI | Words | FKGL | Link Debt | Filler Risk |
|---|---:|---:|---:|---:|---:|
| `docs/architecture/runtime.md` | 87 🆕 | 117 🆕 | 7.1 🆕 | 0.45 🆕 | 0.56 🆕 |

**Callouts**

- 🆕 **docs/architecture/runtime.md** — 117 words, 3 headings, 1 code fence(s), 0 diagram(s), 0 table(s); DMI 87, filler risk 0.56 (MODERATE)

<details>
<summary>Full metric breakdown (structural · wording · lexical · readability)</summary>

### Structural / review

| File | RCI | MCC | MRPC | Evidence | Grounding |
|---|---:|---:|---:|---:|---:|
| `docs/architecture/runtime.md` | 3 🆕 | 1 🆕 | 1 🆕 | 0.10 🆕 | 0.04 🆕 |

### English wording quality

| File | WQS | Passive % | Hedges /100w | Long sent. | Nominalizations |
|---|---:|---:|---:|---:|---:|
| `docs/architecture/runtime.md` | 1.00 🆕 | 7% 🆕 | 0.0 🆕 | 0 🆕 | 2% 🆕 |

### English lexical & readability ensemble

| File | MATTR₅₀ | Hapax | Fog | SMOG | ARI | Coleman-Liau |
|---|---:|---:|---:|---:|---:|---:|
| `docs/architecture/runtime.md` | 0.77 🆕 | 0.78 🆕 | 8.4 🆕 | — | 7.0 🆕 | 10.8 🆕 |

### Filler risk contributors (files with risk > 0.40)

- **`docs/architecture/runtime.md` (0.56)** — specificity-scarcity 1.00, low-repository-grounding 0.96, large-unanchored-prose 0.75

</details>

> Legend: 🟢 improvement · 🔴 regression · ⚠️ attention · 🆕 new file · ⚪ no material change

> Generated by [mehen](https://github.com/ophi-dev/mehen) — the code quality watcher.
